# tAB

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
notebooks/: bbinomial.ipynb  comparing_test.ipynb  ctr.ipynb  ctr_aa_test.ipynb
t_ab/aa/: aa.py
t_ab/ab/: ab.py
t_ab/bayesian/: binomial.py
t_ab/bayesian/binomial/: __init__.py  data.py  test.py
t_ab/ctr/: __init__.py  base.py  impression_based.py  user_based.py
t_ab/frequentist/aa/: __init__.py  aa.py
t_ab/frequentist/ab/: __init__.py  ab.py
t_ab/frequentist/common/: __init__.py  statistics.py  test_result.py
t_ab/frequentist/ctr/: __init__.py  base.py  impression_based.py  user_based.py
t_ab/multiple_comparison/: __init__.py  bonferroni.py
