[tool.poetry]
name = "t-ab"
version = "0.1.0"
description = "tool for AB testing"
authors = ["Keisuke Hirota <tahiro.k.ad@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "t_ab"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"
scipy = "^1.9.3"
pandas = "^1.5.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
ipython = "^8.6.0"
jupyter = "^1.0.0"
notebook = "^6.5.2"
scikit-learn = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
